overflow-hidden to prevent window scroll bars, add padding-bottom for box-shadow

--- a/htdocs/showcase/revcontent-api-showcase-instream-1.0/css/revinstream.scss
+++ b/htdocs/showcase/revcontent-api-showcase-instream-1.0/css/revinstream.scss
@@ -129,6 +129,7 @@
             clear: both;
             position: relative;
             // overflow: hidden;
+            overflow: hidden;
 
             #rev-slider-grid-transition-container {
                 // white-space: nowrap;
